Fixed jumping problem with images.

--- a/37Signals/main.css
+++ b/37Signals/main.css
@@ -33,7 +33,7 @@
 }
 
 #header-text {
-	min-height: 210px;
+	min-height: 215px;
 }
 
 .section-header {
